--- a/DaoBlissWebApp/DaoBlissWebApp.csproj
+++ b/DaoBlissWebApp/DaoBlissWebApp.csproj
@@ -25,4 +25,7 @@
 		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
 		<PackageReference Include="MimeKit" Version="4.13.0" />
 	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="wwwroot\img\" />
+	</ItemGroup>
 </Project>
